--- a/worker/package.json
+++ b/worker/package.json
@@ -2,10 +2,11 @@
 	"name": "worker",
 	"version": "1.0.0",
 	"description": "",
+	"type": "module",
 	"main": "index.js",
 	"scripts": {
-    "start": "node index.js",
-    "dev": "nodemon",
+		"start": "node index.js",
+		"dev": "nodemon",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "loChris",
