--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,21 +21,28 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-    client:
-      stdin_open: true
-      build:
-        dockerefile: Dockerefile.dev
-        context: ./client
-      volumes:
-        - /app/node_modules
-        - ./client:/app
-    worker:
-      build:
-        dockerfile: Dockerefile.dev
-        context: ./worker
-      volumes:
-        - /app/node_modules
-        - ./worker:app
-      environment:
-        - REDIS_HOST=redis
-        - REDIS_PORT=6379
+  client:
+    stdin_open: true
+    build:
+      dockerefile: Dockerefile.dev
+      context: ./client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+  worker:
+    build:
+      dockerfile: Dockerefile.dev
+      context: ./worker
+    volumes:
+      - /app/node_modules
+      - ./worker:app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./nginx
+    ports:
+      - '3050:80'
