--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,18 +24,18 @@ services:
   client:
     stdin_open: true
     build:
-      dockerefile: Dockerefile.dev
+      dockerfile: Dockerfile.dev
       context: ./client
     volumes:
       - /app/node_modules
       - ./client:/app
   worker:
     build:
-      dockerfile: Dockerefile.dev
+      dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
       - /app/node_modules
-      - ./worker:app
+      - ./worker:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -46,3 +46,6 @@ services:
       context: ./nginx
     ports:
       - '3050:80'
+    depends_on:
+      - api
+      - client
