--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ after_success:
   - docker build -t lochris/multi-nginx ./nginx
   - docker build -t lochris/multi-server ./server
   - docker build -t lochris/multi-worker ./worker
+  # log in to docker cli
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --pasword-stdin
+  # push images to docker hub
+  - docker push lochris/multi-client
+  - docker push lochris/multi-nginx
+  - docker push lochris/multi-server
+  - docker push lochris/multi-worker
