--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ deploy:
   app: 'multi-docker'
   env: 'MultiDocker-env'
   bucket_name: elasticbeanstalk-us-east-1-091863196413
-  bucket_path: 'multi-docker'
+  bucket_path: 'docker-multi'
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
